--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="twohundred">200</div>
     <div class="wrap">
         <button onclick="chamar()">Accelerate</button>
-        <input type="text" id="campo">
+        <input type="number" id="campo">
         Insert A Number 0 ~ 200
     </div>
 
